# projects-api

./: db.sqlite3  pyproject.toml  schema.yml
blog/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py
testimonials/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
testimonials/migrations/: 0001_initial.py  0002_alter_testimonial_reviewer_title.py
users/: admin.py  auth_backends.py  forms.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
